<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8171616"
    android:hapticFeedbackEnabled="true"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_red_dark"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="285dp"
            android:layout_height="175dp"
            android:layout_gravity="center"
            android:background="@drawable/teclado">

        </ImageView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/titulo"
            android:paddingTop="10dp"
            android:paddingEnd="10dp">

        </ImageView>


        <LinearLayout
            android:layout_width="337dp"
            android:layout_height="350dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/negro"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/registro_sesion_textview"
                android:textColor="#FFFFFF"
                android:textSize="24dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/email_edittext"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/editTextContrasena"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/contrasena_edittext"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="0.9"
                android:background="@drawable/rectangulo_redondo"
                android:onClick="Registro"
                android:text="@string/register_button"
                android:textColor="#000000"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>